added all the page links

--- a/certificates.html
+++ b/certificates.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>DURG Indudtry Template by Colorlib</title>
+    <title>Sai Precision Industries</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -34,29 +34,6 @@
     <!-- header-start -->
     <header>
         <div class="header-area ">
-            <div class="header-top black-bg d-none d-md-block">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-6 col-md-6 col-lg-6">
-                            <div class="header-contact">
-                                <a href="#"><i class="fa fa-phone"></i> +880 256 356 256</a>
-                                <a href="#"><i class="fa fa-envelope"></i> support24@durg.com</a>
-                            </div>
-                        </div>
-                        <div class="col-xl-6 col-md-6 col-lg-6">
-                            <div class="header-top-menu">
-                                <nav>
-                                    <ul>
-                                        <li><a href="blog.html">News & media</a></li>
-                                        <li><a href="review.html">Review</a></li>
-                                        <li><a href="faq.html">FAQ</a></li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div id="sticky-header" class="main-header-area white-bg">
                 <div class="container">
                     <div class="row align-items-center">
@@ -73,21 +50,9 @@
                                     <ul id="navigation">
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="about.html">About</a></li>
-                                        <li><a class="active" href="service.html">Services</a></li>
-                                        <li><a href="project.html">Projects</a></li>
-                                        <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="blog.html">blog</a></li>
-                                                <li><a href="single-blog.html">single-blog</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="elements.html">elements</a></li>
-                                                <li><a href="service-details.html">service-details</a></li>
-                                                <li><a href="project-details.html">project-details</a></li>
-                                            </ul>
-                                        </li>
+                                        <li><a class="active" href="certificates.html">Certificates</a></li>
+                                        <li><a href="policies.html">Policies</a></li>
+										<li><a href="products.html">Products</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
@@ -95,9 +60,6 @@
                         </div>
                         <div class="col-xl-3 col-lg-3">
                             <div class="quote-area">
-                                <div class="search-bar">
-                                    <a id="search_1" href="javascript:void(0)"><i class="fa fa-search"></i></a>
-                                </div>
                                 <div class="get-quote d-none d-lg-block">
                                     <a class="boxed-btn" href="#">Get a quote</a>
                                 </div>
@@ -128,8 +90,8 @@
                 <div class="col-lg-7 offset-lg-1">
                     <div class="breadcrumb_iner">
                         <div class="breadcrumb_iner_item">
-                            <h2>Our Services</h2>
-                            <p> <a href="index.html">Home.</a> <span></span> Services</p>
+                            <h2>Our Certificates</h2>
+                            <p> <a href="index.html">Home.</a> <span></span> Certificates</p>
                         </div>
                     </div>
                 </div>
@@ -184,27 +146,7 @@
     </div>
     <!-- service-area-end -->
 
-    <!-- cta-area-start -->
-    <div class="cta-area cta-bg-1">
-        <div class="container">
-            <div class="col-xl-6 col-lg-7">
-                <div class="cta-content">
-                    <h3>Let’s talk about your <br>
-                        industrial problems</h3>
-                    <p>Waters make fish every without firmament saw had. <br> Morning air subdue very one. Whales grass
-                        is
-                        fish <br> whales winged.</p>
-                    <div class="cta-btn">
-                        <a class="boxed-btn2 black-bg" href="#">Discuss now <i
-                                class="Flaticon flaticon-right-arrow"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- cta-area-end -->
-
-    <!-- location-area-start -->
+<!-- location-area-start -->
     <div class="addres-area black-bg section-padding">
         <div class="container">
             <div class="row">
@@ -214,9 +156,8 @@
                             <img src="img/icon/1.png" alt="">
                         </div>
                         <h3>Our Location</h3>
-                        <p>127, Manchaster city, London <br>
-                            86/A, green street, California, USA</p>
-                        <a class="underline-hover" href="#">Get Direction</a>
+                                    <p>Bengaluru - India<br/>#10, 1st Main 2nd Cross,<br/>Near Traffic Police Station,<br/>Kamakshipalya,<br/>Bengaluru - 560079 <br>
+                                        +91 9620075410</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4">
@@ -225,8 +166,8 @@
                             <img src="img/icon/2.png" alt="">
                         </div>
                         <h3>Opening hour</h3>
-                        <p>Mon-Fri (9.00-19.00) <br>
-                            Sat-Sun <a class="underline-hover" href="#">(Closed)</a></p>
+                        <p>Mon-Sat (9.00-17.30) <br>
+                            Sun <a class="underline-hover" href="#">(Closed)</a></p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4">
@@ -235,9 +176,8 @@
                             <img src="img/icon/3.png" alt="">
                         </div>
                         <h3>Drop a message</h3>
-                        <p>support@durg.com <br>
-                            456 267 3572</p>
-                        <a class="underline-hover" href="#">Mail Us</a>
+                        <p>saiprecisionproducts@gmail.com <br>
+                            +91 9620075410</p>
                     </div>
                 </div>
             </div>
@@ -245,71 +185,9 @@
     </div>
     <!-- location-area-end -->
 
+
     <!-- footer-start -->
     <footer class="footer-area ">
-        <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-sm-6 col-md-3 col-xl-4">
-                    <div class="single-footer-widget footer_1">
-                        <a href="index.html"> <img src="img/footer-logo.png" alt=""> </a>
-                        <p>Waters make fish every without firmament saw had. Morning air subdue very one. Whales grass
-                            is fish whales winged.</p>
-                        <div class="social-links">
-                            <ul>
-                                <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-md-2 col-xl-2">
-                    <div class="single-footer-widget">
-                        <h4>Company</h4>
-                        <ul>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Media</a></li>
-                            <li><a href="#">Carrier</a></li>
-                            <li><a href="#">Testimonials</a></li>
-                            <li><a href="#">Stability</a></li>
-                        </ul>
-
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-3 col-xl-3">
-                    <div class="single-footer-widget">
-                        <h4>Solutions</h4>
-                        <ul>
-                            <li><a href="#">Industrial problems</a></li>
-                            <li><a href="#"> Construction solution</a></li>
-                            <li><a href="#">Car manufacturing</a></li>
-                            <li><a href="#">Mechanical problems</a></li>
-                        </ul>
-
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-3 col-xl-3">
-                    <div class="single-footer-widget footer_icon">
-                        <h4>Branch office</h4>
-                        <div class="office-location">
-                            <ul>
-                                <li>
-                                    <strong>London - UK</strong>
-                                    <p>127, Manchaster city, London <br>
-                                        +008 728 362 278</p>
-                                </li>
-                                <li>
-                                    <strong>New York - USA</strong>
-                                    <p>127, Manchaster city, London <br>
-                                        +008 728 362 278</p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-lg-12">
