--- a/policies.html
+++ b/policies.html
@@ -49,9 +49,9 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a href="index.html">Home</a></li>
-                                        <li><a class="active" href="about.html">About</a></li>
+                                        <li><a href="about.html">About</a></li>
                                         <li><a href="certificates.html">Certificates</a></li>
-                                        <li><a href="policies.html">Policies</a></li>
+                                        <li><a class="active" href="policies.html">Policies</a></li>
 										<li><a href="products.html">Products</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
@@ -91,8 +91,8 @@
                 <div class="col-lg-7 offset-lg-1">
                     <div class="breadcrumb_iner">
                         <div class="breadcrumb_iner_item">
-                            <h2>Our Company</h2>
-                            <p> <a href="index.html">Home.</a> <span></span> About</p>
+                            <h2>Our Policies</h2>
+                            <p> <a href="index.html">Home.</a> <span></span> Policies</p>
                         </div>
                     </div>
                 </div>
