--- a/index.html
+++ b/index.html
@@ -34,18 +34,6 @@
     <!-- header-start -->
     <header>
         <div class="header-area ">
-            <div class="header-top black-bg d-none d-md-block">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-6 col-md-6 col-lg-6">
-                            <div class="header-contact">
-                                <a href="#"><i class="fa fa-phone"></i> +91 9620075410</a>
-                                <a href="#"><i class="fa fa-envelope"></i> saiprecisionproducts@gmail.com</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div id="sticky-header" class="main-header-area white-bg">
                 <div class="container">
                     <div class="row align-items-center">
@@ -62,8 +50,9 @@
                                     <ul id="navigation">
                                         <li><a class="active" href="index.html">Home</a></li>
                                         <li><a href="about.html">About</a></li>
-                                        <li><a href="service.html">Services</a></li>
-                                        <li><a href="project.html">Projects</a></li>
+                                        <li><a href="certificates.html">Certificates</a></li>
+                                        <li><a href="policies.html">Policies</a></li>
+										<li><a href="products.html">Products</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
@@ -72,7 +61,7 @@
                         <div class="col-xl-3 col-lg-3">
                             <div class="quote-area">
                                 <div class="get-quote d-none d-lg-block">
-                                    <a class="boxed-btn" href="#">Get a quote</a>
+                                    <a class="boxed-btn" href="contact.html">Get a quote</a>
                                 </div>
                             </div>
                         </div>
@@ -242,51 +231,6 @@
 
     <!-- footer-start -->
     <footer class="footer-area ">
-        <div class="container">
-            <div class="row justify-content-between">
-
-
-                <div class="col-sm-6 col-md-2 col-xl-2">
-                    <div class="single-footer-widget">
-                        <h4>Company</h4>
-                        <ul>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Media</a></li>
-                            <li><a href="#">Carrier</a></li>
-                            <li><a href="#">Testimonials</a></li>
-                            <li><a href="#">Stability</a></li>
-                        </ul>
-
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-3 col-xl-3">
-                    <div class="single-footer-widget">
-                        <h4>Solutions</h4>
-                        <ul>
-                            <li><a href="#">Industrial problems</a></li>
-                            <li><a href="#"> Construction solution</a></li>
-                            <li><a href="#">Car manufacturing</a></li>
-                            <li><a href="#">Mechanical problems</a></li>
-                        </ul>
-
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-3 col-xl-3">
-                    <div class="single-footer-widget footer_icon">
-                        <h4>Branch office</h4>
-                        <div class="office-location">
-                            <ul>
-                                <li>
-                                    <strong>Bengaluru - India</strong>
-                                    <p>#10, 1st Main 2nd Cross,<br/>Near Traffic Police Station,<br/>Kamakshipalya,<br/>Bengaluru - 560079 <br>
-                                        +91 9620075410</p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-lg-12">
